refactoring and swagger
