# internal/delivery/http/response/tokens.go
@@ -1,0 +1,6 @@
+package response
+
+type Tokens struct {
+	AccessToken  string `json:"access_token" binding:"required"`
+	RefreshToken string `json:"refresh_token" binding:"required,max=64"`
+}
